<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Movies</string>
    <string name="dummyTitle">Black Panther</string>
    <string name="dummyDate">23 august 2020</string>
    <string name="dummyUserScore">7.8</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet.</string>
    <string name="baseUrlImage">https://image.tmdb.org/t/p/w500%s</string>
    <string name="popularity_detail">1000</string>
    <string name="overview">Overview:</string>
    <string name="date">Release:</string>
    <string name="language">Language:</string>
    <string name="popularity">Popularity:</string>
    <string name="icon">icon</string>
    <string name="search">Search</string>
    <string name="no_data">NO DATA!</string>
    <string name="image_description">description</string>
</resources>